# BackupDeduplicator

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  flake.nix
.github/workflows/: auto_merge_bots.yml  ci.yaml  release-archive.yml  release-plz.yml  release.yml  test.yml
src/: lib.md  lib.rs  main.rs  pool.rs  priority_sender.rs  threadpool.rs  utils.rs
src/cmd/: analyze.rs  build.rs  clean.rs
src/cmd/analyze/: analysis.rs  worker.rs
src/data/: archive.rs  common.rs  compression.rs  copy_stream.rs  file.rs  fileid.rs  hash.rs  hashtree_save_file.rs  job.rs  path.rs  save_file.rs  shallow_ref_tree.rs
src/data/archive/: tar.rs  zip.rs
src/data/hash/: null.rs  sha1.rs  sha2.rs  xxh.rs
src/data/old/: old_analysis.rs
src/data/save_file/: converter.rs
src/main/: utils.rs
src/stages/: analyze.rs  build.rs  clean.rs  dedup.rs  execute.rs  shadow.rs
src/stages/analyze/: cmd.rs  intermediary_analysis_data.rs  intermediary_filetree.rs  worker.rs
src/stages/analyze/output/: dupset_file.rs
src/stages/clean/: cmd.rs
src/stages/dedup/golden_model/: cmd.rs
src/stages/dedup/incremental_golden_model/: cmd.rs
src/stages/dedup/output/: actions.rs
src/stages/execute/: cmd.rs
src/stages/shadow/: cmd.rs
