[package]
name = "backup-deduplicator"
version = "0.3.0"
edition = "2021"
description = """
A tool to deduplicate backups. It builds a hash tree of all files and folders
in the target directory. Optionally also traversing into archives like zip or
tar files. The hash tree is then used to find duplicate files and folders."""
readme = "README.md"
keywords = ["archive-management", "file", "deduplication", "cleanup"]
license = "GPL-3.0-or-later"
homepage = "https://github.com/0xCCF4/BackupDeduplicator"
repository = "https://github.com/0xCCF4/BackupDeduplicator"
documentation = "https://docs.rs/backup-deduplicator"

[dependencies]
clap = { version = "4.5.13", features = ["derive"] }
anyhow = "1.0.93"
env_logger = "0.11.5"
log = "0.4.22"
filetime = "0.2.25"
exitcode = "1.1.2"
serde = { version = "1.0.215", features = ["derive", "rc"] }
serde_json = "1.0.133"
num_cpus = "1.16.0"
file-id = "0.2.2"
xxhash-rust = { version = "0.8.12", features = ["xxh32", "xxh64"], optional = true }
sha1 = {  version = "0.11.0-pre.4", optional = true }
sha2 = {  version = "0.10.8", optional = true }
const_format = "0.2.33"

[features]
hash-sha1 = ["dep:sha1"]
hash-sha2 = ["dep:sha2"]
hash-xxh = ["dep:xxhash-rust"]
default = ["hash-sha1", "hash-sha2", "hash-xxh"]
