[package]
name = "backup-deduplicator"
version = "0.3.0"
edition = "2021"
description = """
A tool to deduplicate backups. It builds a hash tree of all files and folders
in the target directory. Optionally also traversing into archives like zip or
tar files. The hash tree is then used to find duplicate files and folders."""
readme = "README.md"
keywords = ["archive-management", "file", "deduplication", "cleanup"]
license = "GPL-3.0-or-later"
homepage = "https://github.com/0xCCF4/BackupDeduplicator"
repository = "https://github.com/0xCCF4/BackupDeduplicator"
documentation = "https://docs.rs/backup-deduplicator"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.8", features = ["derive"] }
env_logger = "0.11.2"
log = "0.4.22"
filetime = "0.2.23"
exitcode = "1.1.2"
serde = { version = "1.0.203", features = ["derive", "rc"] }
serde_json = "1.0.120"
num_cpus = "1.16.0"
file-id = "0.2.1"
const_format = "0.2.32"
xxhash-rust = { version = "0.8.10", features = ["xxh32", "xxh64"], optional = true }
sha1 = {  version = "0.11.0-pre.3", optional = true }
sha2 = {  version = "0.11.0-pre.3", optional = true }
flate2 = { version = "1.0.30", optional = true }
xz2 = { version = "0.1.7", optional = true }
tar = {  version = "0.4.40", optional = true }
zip = { git = "https://github.com/0xCCF4/zip2", rev = "1d3afa92", optional = true, features = ["chrono"] }
chrono = { version = "0.4.38", optional = true }
rand = "0.8.5"
regex = "1.10.5"
event-listener = "5.4.1"
itertools = "0.14.0"
indicatif-log-bridge = "0.2.3"
indicatif = "0.18.0"

[features]
hash-sha1 = ["dep:sha1"]
hash-sha2 = ["dep:sha2"]
hash-xxh = ["dep:xxhash-rust"]
compress-flate2 = ["dep:flate2"]
compress-xz = ["dep:xz2"]
archive-tar = ["dep:tar"]
archive-zip = ["dep:zip", "dep:chrono"]
default = ["hash-sha1", "hash-sha2", "hash-xxh", "compress-flate2", "compress-xz", "archive-tar", "archive-zip"]
